2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-05-03  Chong Yidong  <cyd@stupidchicken.com>

	* international/mule.el (auto-coding-alist):  Only purecopy
	car of each item, not the whole list (Bug#6083).

2010-05-02  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/js.el (js-mode): Make paragraph variables local before
	calling c-setup-paragraph-variables (Bug#6071).

2010-05-01  Eli Zaretskii  <eliz@gnu.org>

	* composite.el (compose-region, reference-point-alist): Fix typos
	in the doc strings.

2010-04-28  Alexander Klimov <alserkli@inbox.ru> (tiny change)

	* calc/calc-graph.el (calc-graph-plot): Use the proper form for
	gnuplot's "set" command.

2010-04-26  Juanma Barranquero  <lekktu@gmail.com>

	* abbrev.el (last-abbrev-text): Doc fix.
	(abbrev-prefix-mark): Don't escape parenthesis.

2010-04-24  Andreas Schwab  <schwab@linux-m68k.org>

	* composite.el (find-composition): Doc fix.

2010-04-24  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/sql.el (sql-electric-stuff): Fix typo in tag.
	(sql-oracle-program, sql-sqlite-options)
	(sql-query-placeholders-and-send): Doc fixes.
	(sql-set-product, sql-interactive-mode): Reflow docstrings.
	(sql-imenu-generic-expression, sql-buffer)
	(sql-mode-ansi-font-lock-keywords, sql-mode-oracle-font-lock-keywords)
	(sql-mode-postgres-font-lock-keywords, sql-mode-ms-font-lock-keywords)
	(sql-mode-sybase-font-lock-keywords)
	(sql-mode-informix-font-lock-keywords)
	(sql-mode-interbase-font-lock-keywords)
	(sql-mode-ingres-font-lock-keywords, sql-mode-solid-font-lock-keywords)
	(sql-mode-mysql-font-lock-keywords, sql-mode-sqlite-font-lock-keywords)
	(sql-mode-db2-font-lock-keywords, sql-mode-font-lock-keywords)
	(sql-product-feature, sql-highlight-product)
	(comint-line-beginning-position, sql-rename-buffer)
	(sql-toggle-pop-to-buffer-after-send-region)
	(sql-oracle, sql-sybase, sql-informix, sql-sqlite, sql-mysql, sql-solid)